# rag-lab

./: .env  .gitignore  COPILOT_GUIDELINES.md  README.md  pyproject.toml
config/: config.yml
docs/: ffmpeg_implementation_summary.md  file_processing.md  frame_extraction_guide.md  frame_processing.md  implementation_plan.md  timeline.md  todo.md
rag_lab/core/: audio_pipeline.py  auto_subtitle.py  chromadb_client.py  config.py  pipeline.py  text_pipeline.py  video_decoder.py  video_pipeline.py
rag_lab/models/: ollama.py
rag_lab/utils/: config.py  logger.py
scripts/: install_torch.sh  regenerate_frames.py  test_audio_embedding.py  test_frame_embedding.py  test_subtitle_embedding.py  test_video_metadata.py
