[project]

name = "rag-lab"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "faiss-cpu (>=1.13.2,<2.0.0)",
    "numpy (>=2.4.0,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "sentence-transformers (>=5.2.0,<6.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "chromadb (>=1.4.0,<2.0.0)",
    "transformers (>=4.40.0,<5.0.0)",
    "pymediainfo (>=6.0.0,<7.0.0)",
    "pysubs2 (>=1.6.0,<2.0.0)",
    "opencv-python (>=4.8.0,<5.0.0)",
    "ffmpeg-python (>=0.2.0,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
