[project]
name="rag-lab"
[tool.poetry]
name = "rag-lab"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.12,<3.15"
faiss-cpu = ">=1.13.2,<2.0.0"
numpy = ">=2.4.0,<3.0.0"
pandas = ">=2.3.3,<3.0.0"
scikit-learn = ">=1.8.0,<2.0.0"
sentence-transformers = "^5.2.0"
tqdm = ">=4.67.1,<5.0.0"
requests = ">=2.32.5,<3.0.0"
chromadb = ">=1.4.0,<2.0.0"
transformers = "^4.57.5"
pymediainfo = ">=6.0.0,<7.0.0"
pysubs2 = ">=1.6.0,<2.0.0"
opencv-python = ">=4.8.0,<5.0.0"
ffmpeg-python = ">=0.2.0,<0.3.0"
faster-whisper = "^1.2.1"
pillow = "^12.1.0"
psutil = "^7.2.1"
hf-xet = "^1.2.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
